# frontend

./: .pre-commit-config.yaml  main.py  makefile  pyproject.toml
.github/workflows/: linting.yaml
rest/: service.py
