[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
